@@ -10,9 +10,9 @@ libtorrent manual
   :backlinks: none
 
 The following troubleshooting chart may help in finding out why torrents fail
-to download. It is not complete, please submit suggestions via mail to
-arvid@libtorrent.org or to the `mailing list`_. Ideally in the form of patches
-against ``docs/troubleshooting.dot``.
+to download. It is not complete, please submit suggestions via pull requests at
+https://github.com/arvidn/libtorrent or to the `mailing list`_. Ideally in the
+form of patches against ``docs/troubleshooting.dot``.
 
 .. _`mailing list`: http://lists.sourceforge.net/lists/listinfo/libtorrent-discuss
 
